Code School Projects Build tasks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
 </head>
 <body>
 
-  Welcome to the HTML Portfolio Project
+  <div class="header">
+    <h1>A. James Requenez</h1>
+    <h2>Sr. Developer and Systems Integrator</h2>
+  </div>
 
+  <div class="tagline">
+    <h3>A little bit about what I do...</h3>
+    <p>
+      No one system can fulfil everyone's business needs (Not unless you want to spend millions of $$ and years to implement,
+      and then immediately spend thousands of $$ more and months to update). People work best with the systems they already know,
+      and I simply connect those systems so they can talk to each other more efficiently.
+    </p>
+  </div>
+
+  <div class="skills">
+    <h3>Skills</h3>
+    <p>I am a connector, and I have connected many systems using these technologies...</p>
+    <ul>
+      <li>HTML</li>
+      <li>javascript</li>
+      <li>C#/.Net</li>
+      <li>ColdFusion</li>
+      <li>node.js</li>
+      <li>PHP</li>
+      <li>Python</li>
+    </ul>
+  </div>
+
+  <div class="contact">
+    <h3>If you need a connector</h3>
+    <p>You can contact me at: <a href="http://twitter.com/jamesrequenez">@jamesrequenez</a></p>
+  </div>
 </body>
 </html>
